# OceanWave3D

./: CMakeLists.txt  README.md  build.bat  fragment.glsl  imgui.ini  main.cpp  vcpkg.json  vertex.glsl  water_cube.frag  water_cube.vert
include/KHR/: khrplatform.h
include/glad/: glad.h
src/: glad.c
